kubernetes/Traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: traefik-hub
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`k8s.confrariadocodigotecnologia.com`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
      middlewares:
        - name: ratelimit
